# mat

./: .gitignore  CMakeLists.txt  Readme.md
mat/: CMakeLists.txt  DenseMatrixBlock.h  DenseMatrixBlock.hpp  DiagonalMatrixBlock.cpp  DiagonalMatrixBlock.h  DiagonalMatrixBlock.hpp  DimensionDescriptor.cpp  DimensionDescriptor.h  DimensionDescriptor.hpp  DimensionDescriptorTraits.cpp  DimensionDescriptorTraits.h  DimensionDescriptorTraits.hpp  Global.cpp  Global.h  MatrixBlockBase.cpp  MatrixBlockBase.h  MatrixBlockBase.hpp  MatrixBlockDescriptor.cpp  MatrixBlockDescriptor.h  MatrixBlockDescriptor.hpp  MatrixBlockTypeTraits.h  MatrixTypeTraits.h  SparseCoeffDiagonalMatrixBlock.cpp  SparseCoeffDiagonalMatrixBlock.h  SparseCoeffDiagonalMatrixBlock.hpp  SparseCoeffMatrixBlock.cpp  SparseCoeffMatrixBlock.h  SparseCoeffMatrixBlock.hpp  SparseMatrixBlock.h  SparseMatrixBlock.hpp  SparsityPattern.cpp  SparsityPattern.h  SparsityPatternBlockDescriptor.cpp  SparsityPatternBlockDescriptor.h  SparsityPatternBlockDescriptor.hpp  Utils.cpp  Utils.h  Utils.hpp  VectorBlock.cpp  VectorBlock.h  (+1 more)
mat/samples/: CMakeLists.txt  eigenPlayground.cpp
mat/tests/: CMakeLists.txt  DenseMatrixBlockCatch.cpp  DenseMatrixBlockIterableCatch.cpp  DiagonalMatrixBlockCatch.cpp  DiagonalMatrixBlockIterableCatch.cpp  DimensionDescriptorCatch.cpp  MatrixBlockDescriptorCatch.cpp  SparseCoeffDiagonalMatrixBlockCatch.cpp  SparseCoeffDiagonalMatrixBlockIterableCatch.cpp  SparseCoeffMatrixBlockCatch.cpp  SparseMatrixBlockCatch.cpp  SparsityPatternBlockDescriptorCatch.cpp  SparsityPatternCatch.cpp  VectorBlockCatch.cpp
